[gd_scene load_steps=6 format=3 uid="uid://b10noqspuk4hb"]

[ext_resource type="Script" path="res://Scripts/game_ui.gd" id="1_j4t1v"]
[ext_resource type="Theme" uid="uid://cyij5s8lhrrvn" path="res://Themes/little_guy_theme.tres" id="2_uvq0u"]
[ext_resource type="PackedScene" uid="uid://c7bjakgxejx6n" path="res://Scenes/LittleGuy.tscn" id="3_241lt"]

[sub_resource type="InputEventKey" id="InputEventKey_dl0n3"]
device = -1
pressed = true
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_dk05t"]
events = [SubResource("InputEventKey_dl0n3")]

[node name="FullInterface" type="CanvasLayer"]
script = ExtResource("1_j4t1v")

[node name="GameOverPanel" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -386.0
offset_right = 832.0
offset_bottom = 382.0
grow_vertical = 2
theme = ExtResource("2_uvq0u")

[node name="ScoreText" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 100
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 704.0
offset_bottom = 448.0
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]000000000000[/center]"

[node name="HighScoreGratz" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 64
text = "Congratulations!
New Highscore!"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 656.0
offset_right = 256.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="QuitButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 512.0
offset_top = 656.0
offset_right = 704.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "MAIN"

[node name="LevelButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 288.0
offset_top = 656.0
offset_right = 480.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "LEVEL
SELECT"

[node name="PauseButton" type="Button" parent="."]
process_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 72.0
grow_horizontal = 0
theme = ExtResource("2_uvq0u")
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_dk05t")
shortcut_in_tooltip = false
text = "(P)AUSE"

[node name="ReadyScreen" type="Panel" parent="."]
process_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -386.0
offset_right = 832.0
offset_bottom = 382.0
grow_vertical = 2
theme = ExtResource("2_uvq0u")

[node name="ReadyButton" type="Button" parent="ReadyScreen"]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 64
text = "CLICK ME TO START"
autowrap_mode = 2

[node name="PausePanel" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -386.0
offset_right = 832.0
offset_bottom = 382.0
grow_vertical = 2
theme = ExtResource("2_uvq0u")

[node name="ScoreText" type="Label" parent="PausePanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 704.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 128
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restartbutton" type="Button" parent="PausePanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 656.0
offset_right = 256.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "RESTART"

[node name="QuitButton" type="Button" parent="PausePanel"]
layout_mode = 0
offset_left = 512.0
offset_top = 656.0
offset_right = 704.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="LevelButton" type="Button" parent="PausePanel"]
layout_mode = 0
offset_left = 288.0
offset_top = 656.0
offset_right = 480.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 32
text = "LEVEL
SELECT"

[node name="UnpauseText" type="Label" parent="PausePanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 640.0
theme_override_font_sizes/font_size = 64
text = "(Press P to Unpause)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScorePanel" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -632.0
offset_top = -322.0
offset_right = -56.0
offset_bottom = 382.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_uvq0u")

[node name="ScoreText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 188.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 48
text = "SCORE"
vertical_alignment = 1

[node name="ScoreVal" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 176.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HighText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 104.0
offset_right = 188.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 48
text = "BEST"
vertical_alignment = 1

[node name="HighVal" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 176.0
offset_top = 104.0
offset_right = 544.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CountText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 188.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 48
text = "CLEAR"
vertical_alignment = 1

[node name="CountVal" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 176.0
offset_top = 175.0
offset_right = 544.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LevelText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 248.0
offset_right = 188.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 48
text = "LEVEL"
vertical_alignment = 1

[node name="LevelVal" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 176.0
offset_top = 248.0
offset_right = 544.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimeText" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 320.0
offset_right = 188.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 48
text = "TIME"
vertical_alignment = 1

[node name="TimeVal" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 176.0
offset_top = 320.0
offset_right = 544.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 48
text = "00:00.00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Next" type="Label" parent="ScorePanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 408.0
offset_right = 168.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 48
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnseenGuys" type="Label" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 480.0
offset_right = 336.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 48
text = "+1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextHighlight" type="ColorRect" parent="ScorePanel"]
layout_mode = 0
offset_left = 48.0
offset_top = 479.0
offset_right = 144.0
offset_bottom = 559.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight2" type="ColorRect" parent="ScorePanel"]
layout_mode = 0
offset_left = 144.0
offset_top = 480.0
offset_right = 240.0
offset_bottom = 560.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight3" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 480.0
offset_right = 336.0
offset_bottom = 560.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight4" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 336.0
offset_top = 480.0
offset_right = 432.0
offset_bottom = 560.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight5" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 432.0
offset_top = 480.0
offset_right = 528.0
offset_bottom = 560.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight6" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 560.0
offset_right = 144.0
offset_bottom = 640.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight7" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 144.0
offset_top = 560.0
offset_right = 240.0
offset_bottom = 640.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight8" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 240.0
offset_top = 560.0
offset_right = 336.0
offset_bottom = 640.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight9" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 336.0
offset_top = 560.0
offset_right = 432.0
offset_bottom = 640.0
color = Color(1, 0, 0, 0.196078)

[node name="NextHighlight10" type="ColorRect" parent="ScorePanel"]
visible = false
layout_mode = 0
offset_left = 432.0
offset_top = 560.0
offset_right = 528.0
offset_bottom = 640.0
color = Color(1, 0, 0, 0.196078)

[node name="LittleGuy" parent="ScorePanel" instance=ExtResource("3_241lt")]
position = Vector2(96, 520)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy2" parent="ScorePanel" instance=ExtResource("3_241lt")]
position = Vector2(192, 520)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy3" parent="ScorePanel" instance=ExtResource("3_241lt")]
position = Vector2(288, 520)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy4" parent="ScorePanel" instance=ExtResource("3_241lt")]
position = Vector2(384, 520)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy5" parent="ScorePanel" instance=ExtResource("3_241lt")]
position = Vector2(480, 520)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy6" parent="ScorePanel" instance=ExtResource("3_241lt")]
visible = false
position = Vector2(96, 600)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy7" parent="ScorePanel" instance=ExtResource("3_241lt")]
visible = false
position = Vector2(192, 600)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy8" parent="ScorePanel" instance=ExtResource("3_241lt")]
visible = false
position = Vector2(288, 600)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy9" parent="ScorePanel" instance=ExtResource("3_241lt")]
visible = false
position = Vector2(384, 600)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="LittleGuy10" parent="ScorePanel" instance=ExtResource("3_241lt")]
visible = false
position = Vector2(480, 600)
scale = Vector2(0.75, 0.75)
collision_layer = 0
collision_mask = 0
input_pickable = false
freeze = true
contact_monitor = false

[node name="TimeProg" type="ProgressBar" parent="ScorePanel"]
layout_mode = 0
offset_left = 56.0
offset_top = 576.0
offset_right = 520.0
offset_bottom = 624.0
theme = ExtResource("2_uvq0u")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="ScorePanel/TimeProg"]
layout_mode = 0
offset_right = 464.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 24
text = "GET READY!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameOverPanel/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverPanel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameOverPanel/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="button_down" from="ReadyScreen/ReadyButton" to="." method="_on_ready_button_button_down"]
[connection signal="pressed" from="PausePanel/Restartbutton" to="." method="_on_restartbutton_pressed"]
[connection signal="pressed" from="PausePanel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PausePanel/LevelButton" to="." method="_on_level_button_pressed"]
